<!-- Assignment1
    // MainActivity.java
    // Goda Kodati , Ganesh Vasa
    // Group 8
    -->

<resources>
    <string name="app_name">InClass01</string>
    <string name="List_Price">Enter List Price</string>
    <string name="Discount_Calculator">Discount Calculator</string>
    <string name="item_Price">item Price</string>
    <string name="Sale">Sale</string>
    <string name="radiobutton10">10%</string>
    <string name="radiobutton15">15%</string>
    <string name="radiobutton18">18%</string>
    <string name="radiobuttonCustom">Custom</string>
    <string name="Custom">Custom %:</string>
    <string name="discountvalue">0.00</string>
    <string name="FinalPrice">Final Price:</string>
    <string name="Finalvalue">0.00</string>
    <string name="Resetbutton">Reset</string>
    <string name="Calculatebutton">Calculate</string>
    <string name="Discount">Discount:</string>
    <string name="seekbarvalue">0%</string>
</resources>