<!-- Assignment1
    // MainActivity.java
    // Goda Kodati , Ganesh Vasa
    // Group 8
    -->

<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="229dp"
        android:layout_height="45dp"
        android:text="@string/Discount_Calculator"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/item_Price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/List_Price"
        android:inputType="number|numberSigned"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/itemPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemPrice" />

    <TextView
        android:id="@+id/Sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Sale"
        app:layout_constraintStart_toStartOf="@+id/itemPrice"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Sale"
        app:layout_constraintTop_toBottomOf="@+id/price">

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radiobutton10" />

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton15" />

        <RadioButton
            android:id="@+id/radioButton18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton18" />

        <RadioButton
            android:id="@+id/radioButtoncustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobuttonCustom" />
    </RadioGroup>

    <TextView
        android:id="@+id/custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Custom"
        app:layout_constraintStart_toStartOf="@+id/Sale"
        app:layout_constraintTop_toBottomOf="@+id/Sale" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/custom"
        app:layout_constraintEnd_toStartOf="@+id/textViewprogress"
        app:layout_constraintStart_toEndOf="@+id/custom"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup"
        android:max="50"/>

    <TextView
        android:id="@+id/textViewprogress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/seekbarvalue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekbar" />

    <TextView
        android:id="@+id/Discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Discount"
        app:layout_constraintStart_toStartOf="@+id/custom"
        app:layout_constraintTop_toBottomOf="@+id/custom" />

    <TextView
        android:id="@+id/textViewdiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/discountvalue"
        app:layout_constraintBottom_toBottomOf="@+id/Discount"
        app:layout_constraintStart_toEndOf="@+id/Discount"
        app:layout_constraintTop_toBottomOf="@+id/seekbar" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/FinalPrice"
        app:layout_constraintStart_toStartOf="@+id/Discount"
        app:layout_constraintTop_toBottomOf="@+id/Discount" />

    <TextView
        android:id="@+id/textviewfinalprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Finalvalue"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textViewdiscount"
        app:layout_constraintTop_toBottomOf="@+id/textViewdiscount" />

    <Button
        android:id="@+id/resetbutton"
        android:layout_width="104dp"
        android:layout_height="51dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="36dp"
        android:text="@string/Resetbutton"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/calculatebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/Calculatebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toEndOf="@+id/resetbutton"
        app:layout_constraintTop_toBottomOf="@+id/textviewfinalprice" />



</androidx.constraintlayout.widget.ConstraintLayout>